--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                         <div class="fa-logo">
                             <a href="#"><img src="img/logo.png" alt=""></a>
                         </div>
-                        <p>The definition of a gym, short for gymnasium, is a room or building where people go to play sports or exercise</p>
+                        <p>The definition of a gym, short for gymnasium, is a room or building where people go to play sports or exercise 1</p>
                         <div class="fa-social">
                             <a href="https://www.linkedin.com/in/abhishek-nagaich-14bb73192" target="-blank"><i class="fa fa-linkedin" ></i> </a>
                             <a href="#"><i class="fa fa-facebook"></i></a>
